# VectorGraphLibrary

./: .cproject  .project  CMakeLists.txt  LICENSE.txt  Makefile.gcc  Makefile.ibm  Makefile.intel  Makefile.polus  Makefile.tohoku  Makefile.volta  README.md  architecture_independent_api.h  architectures.h  bfs.cpp  cc.cpp  custom_test.cpp  framework_types.h  generate_memory_traces.cpp  generate_test_data.cpp  graph_library.h  install.sh  kcore.cpp  lambda_tests.cpp  nvgraph_comparison.cpp  pr.cpp  run.sh  settings.h  sssp.cpp  sswp.cpp
algorithms/bfs/: bfs.h  bfs.hpp  bfs_graph_ve.hpp  change_state.h  change_state.hpp  gpu_bfs.hpp  hardwired_do_bfs.hpp  manually_optimized.hpp  nec_bfs.hpp  new_nec_bfs.hpp  seq_bfs.hpp  verifier.hpp  vertex_queue.h
algorithms/cc/: bfs_based.hpp  cc.h  cc.hpp  gpu_shiloach_vishkin.hpp  nec_bfs_based.hpp  nec_random_mate.hpp  nec_shiloach_vishkin.hpp  seq_bfs_based.hpp  shiloach_vishkin.hpp
algorithms/coloring/: coloring.h  coloring.hpp
algorithms/hits/: hits.h  hits.hpp
algorithms/kcore/: kcore.h  kcore.hpp
algorithms/label_propagation/: label_propagation.h  label_propagation.hpp  map_based_lp.hpp  vect_dict_based_lp.hpp
algorithms/lp/: gpu_label_propagation.hpp  gpu_lp.hpp  lp.h  lp.hpp  lp_constants.h  seq_lp.hpp
algorithms/mf/: mf.h  mf.hpp  nec_mf.hpp  seq_mf.hpp
algorithms/page_rank/: page_rank.h  page_rank.hpp
algorithms/pr/: gpu_pr.hpp  nec_pr.hpp  pr.h  pr.hpp  seq_pr.hpp
algorithms/rw/: random_walk.h  random_walk.hpp
algorithms/scc/: gpu_scc.hpp  nec_scc.hpp  scc.h  scc.hpp  seq_scc.hpp
algorithms/sssp/: bf_edges_list.hpp  bf_ext_CSR.hpp  bf_sharded_CSR.hpp  bf_vectorised_CSR.hpp  gpu_shortest_paths.hpp  multicore_shortest_paths.hpp  nec_shortest_paths.hpp  seq_shortest_paths.hpp  shortest_paths.h  shortest_paths.hpp
algorithms/sswp/: bellman_ford.hpp  nec_widest_paths.hpp  seq_widest_paths.hpp  widest_paths.h  widest_paths.hpp
algorithms/tc/: tc.h  tc.hpp
apps/: Makefile  Makefile.a64fx  Makefile.gcc  Makefile.gpu  Makefile.ibm  Makefile.intel  Makefile.knl  Makefile.nec  Makefile.nec_mpi  Makefile.polus  Makefile.tohoku  Makefile.volta  a64fx_run.sh  analyse_graph.cpp  apsp.cpp  arch_info.txt  arm_bfs_model.sav  arm_cc_model.sav  arm_pr_features.pickle  arm_pr_model.sav  arm_sssp_model.sav  bfs.cpp  bfs_do.cpp  bfs_td.cpp  cc.cpp  download.py  gather.cpp  generate_test_data.cpp  gpu_bfs_model.sav  gpu_cc_features.pickle  gpu_cc_model.sav  gpu_pr_model.sav  gpu_sssp_model.sav  graph_library.sh  kcore.cpp  lp.cpp  mc_bfs_model.sav  mc_cc_model.sav  mc_pr_model.sav  mc_sssp_model.sav  (+13 more)
apps/apsp/: apsp.cpp
apps/bfs/: bfs.cpp  bfs.cu  do_bfs.cpp
apps/cc/: cc.cpp  cc.cu
apps/coloring/: coloring.cpp
apps/hits/: hits.cpp
apps/lp/: lp.cpp
apps/mf/: mf.cpp
apps/misc/: analyse_graph.cpp  create_vgl_graphs.cpp  csr_test.cpp  gather.cpp  generate_test_data.cpp  metis.cpp  mpi_benchmarks.cpp  mpi_graphs.cpp  test.cpp
apps/mpi/: sssp_mpi.cpp
apps/pr/: pr.cpp  pr.cu
apps/rw/: rw.cpp
apps/scc/: scc.cpp  scc.cu
apps/scripts/: benchmark_app.py  benchmarking_api.py  common.py  create_graphs_api.py  export.py  export_results.py  export_to_xls.py  helpers.py  settings.py  submit_results.py  verification_api.py  xls_stats_api.py
apps/sssp/: mpi_run.sh  sharded_sssp.cpp  sssp.cpp  sssp.cu  sssp_knl.cpp  sssp_mpi.cpp  sssp_sharded.cpp
apps/sssp/misc/: test.cpp
apps/sswp/: sswp.cpp  sswp.cu
apps/tc/: tc.cpp
apps/utilites/: create_vgl_graphs.cpp  print_graph_info.cpp
common/cmd_parser/: cmd_parser.h  cmd_parser.hpp  parser_options.h
common/gpu_API/: cuda_reorder.cu  cuda_reorder.cuh  select_device.cuh
common/library_data/: finalize.hpp  init.hpp  library_data.h  mpi_api.hpp  mpi_exchange.hpp
common/library_helpers/: finalize_library.hpp  init_library.hpp
common/memory_API/: memory_API.h  memory_API.hpp
common/misc/: extensions.h
common/parallel_primitives/: copy_if.h  get_elements_count.h  omp_parallel_call.h  primitives.h
common/performance_data/: performance_data.h
common/performance_stats/: performance_stats.h  performance_stats.hpp
common/random_generator/: ASL_random_generator.h  ASL_random_generator.hpp  common_random_generator.h  random_generation_API.h  random_generator.h  random_generator.hpp
common/sorter/: sorter.h
common/sorting/: sorting.h
common/timer/: timer.h  timer.hpp
common/verify_results/: verify_results.h
common_API/: vgl_common_API.h
common_datastructures/cmd_parser/: cmd_parser.h  cmd_parser.hpp
common_datastructures/gpu_API/: cuda_error_handling.h  gpu_arrays.h
common_datastructures/parallel_primitives/: copy_if.h
common_datastructures/random_generator/: random_generation_API.h
common_datastructures/sorting_API/: sorting_API.h
common_datastructures/vector_dictionary/: vector_dictionary.h  vector_dictionary.hpp
common_datastructures/vector_sorter/: vector_sorter.h  vector_sorter.hpp
common_functions/cmd_parser/: cmd_parser.h  cmd_parser.hpp
export_graphs/: edges_list_export.h  gapbs_export.h  ligra_export.h
external_libraries/: graph_500_generator.py  readMe.txt
graph_analytics/: access_profiling.h  access_profiling.hpp  cache_metrics.h  cache_metrics.hpp  graph_analytics.h  graph_analytics.hpp
graph_generation_API/: graph_generation_API.h  graph_generation_API.hpp
graph_processing_API/: edges_array.h  framework_types.h  frontier.h  graph_abstractions.h  graph_primitives.h  vertices_array.h
graph_representations/: base_graph.h
manuals/: add_new_architecture.txt  new_graph_storage_format.txt
misc/: Makefile.gpu  Makefile.tohocku  asl_tests.cpp  custom_test.cpp  generate_memory_traces.cpp  lambda_tests.cpp  memory_access_patterns.cpp  memory_access_patterns.cu  my_bfs.cpp  nvgraph_comparison.cpp  run_nvgraph.sh  run_web.sh  vector_tests.cpp
rating_server/: drop.py  mongo_api.py  normalized_rating.py  perf_data_reciever.py  update_meta_data.py  waitress_server.py  web_rating.py
verification/: page_rank_verification.hpp  shortest_paths_verification.hpp
vgl_runtime/: vgl_reminder_api.h  vgl_runtime.h  vgl_runtime.hpp
(+510 files in other folders)
