cmake_minimum_required(VERSION 3.13)
project(VectorGraphLibrary)

include_directories(.)
include_directories(algorithms)
include_directories(algorithms/bfs)
include_directories(algorithms/bfs/change_state)
include_directories(algorithms/cc)
include_directories(algorithms/kcore)
include_directories(algorithms/lp/gpu)
include_directories(algorithms/pr)
include_directories(algorithms/sssp)
include_directories(algorithms/sswp)
include_directories(apps)
include_directories(common)
include_directories(common/cmd_parser)
include_directories(common/gpu_API)
include_directories(common/memory_API)
include_directories(common/parallel_primitives)
include_directories(common/random_generator)
include_directories(common/sorter)
include_directories(common/verify_results)
include_directories(export_graphs)
include_directories(graph_analytics)
include_directories(graph_generation_API)
include_directories(graph_processing_API)
include_directories(graph_processing_API/gpu)
include_directories(graph_processing_API/nec)
include_directories(graph_processing_API/nec/delayed_write)
include_directories(graph_processing_API/nec/frontier)
include_directories(graph_processing_API/nec/graph_primitives)
include_directories(graph_processing_API/nec/vector_register)
include_directories(graph_representations)
include_directories(graph_representations/common)
include_directories(graph_representations/edges_list_graph)
include_directories(graph_representations/undirected_csr_graph)
include_directories(graph_representations/undirected_csr_graph/vector_extension)
include_directories(graph_representations/sharded_csr_graph)
include_directories(graph_representations/sharded_csr_graph/shard_base)
include_directories(graph_representations/sharded_csr_graph/shard_CSR)
include_directories(graph_representations/sharded_csr_graph/shard_vect_csr)
include_directories(verification)

add_executable(VectorGraphLibrary
        algorithms/bfs/change_state/change_state.h
        algorithms/bfs/change_state/change_state.hpp
        algorithms/bfs/bfs.h
        algorithms/bfs/gpu_bfs.hpp
        algorithms/bfs/nec_bfs.hpp
        algorithms/bfs/seq_bfs.hpp
        algorithms/cc/cc.h
        algorithms/cc/gpu_shiloach_vishkin.hpp
        algorithms/cc/nec_bfs_based.hpp
        algorithms/cc/nec_shiloach_vishkin.hpp
        algorithms/cc/seq_bfs_based.hpp
        algorithms/lp/lp.h
        algorithms/lp/lp.hpp
        algorithms/pr/pr.h
        algorithms/sssp/gpu_shortest_paths.hpp
        algorithms/sssp/nec_shortest_paths.hpp
        algorithms/sssp/seq_shortest_paths.hpp
        algorithms/sssp/shortest_paths.h
        algorithms/sswp/widest_paths.h
        apps/bfs/bfs.cpp
        apps/cc/cc.cpp
        apps/utilites/create_vgl_graphs.cpp
        apps/graph_library.sh
        apps/Makefile.gpu
        apps/Makefile.nec
        apps/pr/pr.cpp
        apps/sssp/sssp.cpp
        common/cmd_parser/cmd_parser.h
        common/cmd_parser/cmd_parser.hpp
        common/cmd_parser/parser_options.h
        common/gpu_API/cuda_error_handling.h
        common/memory_API/memory_API.h
        common/memory_API/memory_API.hpp
        common/parallel_primitives/copy_if.h
        common/parallel_primitives/get_elements_count.h
        common/random_generator/asl_generator/asl_generator.h
        common/random_generator/asl_generator/asl_generator.hpp
        common/random_generator/common_generator/common_generator.h
        common/random_generator/random_generator.h
        common/sorter/sorter.h
        common/verify_results/verify_results.h
        export_graphs/edges_list_export.h
        export_graphs/ligra_export.h
        graph_analytics/graph_analytics.h
        graph_analytics/graph_analytics.hpp
        graph_generation_API/graph_generation_API.h
        graph_generation_API/graph_generation_API.hpp
        graph_processing_API/nec/delayed_write/delayed_write_nec.h
        graph_processing_API/nec/delayed_write/delayed_write_nec.hpp
        graph_processing_API/nec/frontier/frontier_nec.h
        graph_processing_API/nec/frontier/frontier_nec.hpp
        graph_processing_API/nec/vector_register/vector_registers.h
        graph_representations/edges_list_graph/edges_list_graph.h
        graph_representations/edges_list_graph/edges_list_graph.hpp
        graph_representations/undirected_csr_graph/vector_extension/vector_extension.h
        graph_representations/undirected_csr_graph/vector_extension/vector_extension.hpp
        graph_representations/undirected_csr_graph/undirected_csr_graph.h
        graph_representations/undirected_csr_graph/undirected_csr_graph.hpp
        graph_representations/undirected_csr_graph/gpu_api.hpp
        graph_representations/undirected_csr_graph/import.hpp
        graph_representations/undirected_csr_graph/nec_api.hpp
        graph_representations/sharded_csr_graph/sharded_csr_graph.h
        graph_representations/sharded_csr_graph/sharded_csr_graph.hpp
        graph_representations/base_graph.h
        architectures.h)