cmake_minimum_required(VERSION 3.13)
project(VectorGraphLibrary)

include_directories(.)
include_directories(algorithms)
include_directories(algorithms/bfs)
include_directories(algorithms/bfs/change_state)
include_directories(algorithms/cc)
include_directories(algorithms/kcore)
include_directories(algorithms/lp/gpu)
include_directories(algorithms/pr)
include_directories(algorithms/sssp)
include_directories(algorithms/sswp)
include_directories(apps)
include_directories(vgl_runtime/helpers)
include_directories(vgl_runtime/helpers/cmd_parser)
include_directories(vgl_runtime/helpers/gpu_API)
include_directories(vgl_runtime/helpers/memory_API)
include_directories(vgl_runtime/helpers/parallel_primitives)
include_directories(vgl_runtime/helpers/random_generator)
include_directories(vgl_runtime/helpers/sorter)
include_directories(vgl_runtime/helpers/verify_results)
include_directories(vgl_runtime/export_graphs)
include_directories(vgl_runtime/graph_analytics)
include_directories(vgl_runtime/graph_generation)
include_directories(vgl_compute_api)
include_directories(vgl_compute_api/gpu)
include_directories(vgl_compute_api/nec)
include_directories(vgl_compute_api/nec/delayed_write)
include_directories(vgl_compute_api/nec/frontier)
include_directories(vgl_compute_api/nec/graph_primitives)
include_directories(vgl_compute_api/nec/vector_register)
include_directories(vgl_datastructures)
include_directories(vgl_datastructures/common)
include_directories(vgl_datastructures/graphs/undirected_containers/edges_list)
include_directories(vgl_datastructures/graphs/undirected_containers/vect_csr)
include_directories(vgl_datastructures/graphs/undirected_containers/vect_csr/vector_extension)
include_directories(vgl_datastructures/graphs/undirected_containers/sharded_csr_graph)
include_directories(vgl_datastructures/graphs/undirected_containers/sharded_csr_graph/shard_base)
include_directories(vgl_datastructures/graphs/undirected_containers/sharded_csr_graph/shard_CSR)
include_directories(vgl_datastructures/graphs/undirected_containers/sharded_csr_graph/shard_vect_csr)
include_directories(verification)

add_executable(VectorGraphLibrary
        algorithms/bfs/change_state/change_state.h
        algorithms/bfs/change_state/change_state.hpp
        algorithms/bfs/bfs.h
        algorithms/bfs/gpu_bfs.hpp
        algorithms/bfs/bfs.hpp
        algorithms/bfs/seq_bfs.hpp
        algorithms/cc/cc.h
        algorithms/cc/gpu_shiloach_vishkin.hpp
        algorithms/cc/bfs_based.hpp
        algorithms/cc/shiloach_vishkin.hpp
        algorithms/cc/seq_bfs_based.hpp
        algorithms/kcore/kcore.h
        algorithms/kcore/kcore.hpp
        algorithms/lp/lp.h
        algorithms/lp/lp.hpp
        algorithms/pr/pr.h
        algorithms/sssp/gpu_shortest_paths.hpp
        algorithms/sssp/shortest_paths.hpp
        algorithms/sssp/seq_shortest_paths.hpp
        algorithms/sssp/shortest_paths.h
        algorithms/sswp/widest_paths.h
        apps/bfs/bfs.cpp
        apps/cc/cc.cpp
        apps/utilites/create_vgl_graphs.cpp
        apps/graph_library.sh
        apps/Makefile.gpu
        apps/Makefile.nec
        apps/pr/pr.cpp
        apps/sssp/sssp.cpp
        vgl_runtime/helpers/cmd_parser/cmd_parser.h
        vgl_runtime/helpers/cmd_parser/cmd_parser.hpp
        vgl_runtime/helpers/cmd_parser/parser_options.h
        vgl_runtime/helpers/gpu_API/cuda_error_handling.h
        vgl_runtime/helpers/memory_API/memory_API.h
        vgl_runtime/helpers/memory_API/memory_API.hpp
        vgl_runtime/helpers/parallel_primitives/copy_if/copy_if.h
        vgl_runtime/helpers/parallel_primitives/count_if/count_if.h
        vgl_runtime/helpers/random_generator/asl_generator/asl_generator.h
        vgl_runtime/helpers/random_generator/asl_generator/asl_generator.hpp
        vgl_runtime/helpers/random_generator/common_generator/common_generator.h
        vgl_runtime/helpers/random_generator/random_generator.h
        vgl_runtime/helpers/sorter/sorter.h
        vgl_runtime/helpers/verify_results/verify_results.h
        vgl_runtime/export_graphs/edges_list_export.h
        vgl_runtime/export_graphs/ligra_export.h
        vgl_runtime/graph_analytics/graph_analytics.h
        vgl_runtime/graph_analytics/graph_analytics.hpp
        vgl_runtime/graph_generation/graph_generation.h
        vgl_runtime/graph_generation/graph_generation.hpp
        vgl_compute_api/nec/delayed_write/delayed_write_nec.h
        vgl_compute_api/nec/delayed_write/delayed_write_nec.hpp
        vgl_compute_api/nec/frontier/frontier_nec.h
        vgl_compute_api/nec/frontier/frontier_nec.hpp
        vgl_compute_api/nec/graph_primitives/advance.hpp
        vgl_compute_api/nec/graph_primitives/advance_all_active.hpp
        vgl_compute_api/nec/graph_primitives/advance_dense.hpp
        vgl_compute_api/nec/graph_primitives/advance_partial.hpp
        vgl_compute_api/nec/graph_primitives/advance_sparse.hpp
        vgl_compute_api/nec/graph_primitives/compute.hpp
        vgl_compute_api/nec/graph_primitives/filter.hpp
        vgl_compute_api/nec/graph_primitives/generate_new_frontier.hpp
        vgl_compute_api/nec/graph_primitives/graph_primitives_nec.h
        vgl_compute_api/nec/graph_primitives/graph_primitives_nec.hpp
        vgl_compute_api/nec/graph_primitives/tests.hpp
        vgl_compute_api/nec/vector_register/vector_registers.h
        vgl_datastructures/common/graph_types.h
        vgl_datastructures/graphs/undirected_containers/edges_list/edges_list_graph.h
        vgl_datastructures/graphs/undirected_containers/edges_list/edges_list_graph.hpp
        vgl_datastructures/graphs/undirected_containers/vect_csr/vector_extension/vector_extension.h
        vgl_datastructures/graphs/undirected_containers/vect_csr/vector_extension/vector_extension.hpp
        vgl_datastructures/graphs/undirected_containers/vect_csr/vect_csr_graph.h
        vgl_datastructures/graphs/undirected_containers/vect_csr/vect_csr_graph.hpp
        vgl_datastructures/graphs/undirected_containers/vect_csr/import.hpp
        vgl_datastructures/graphs/undirected_containers/vect_csr/nec_api.hpp
        vgl_datastructures/graphs/undirected_containers/sharded_csr_graph/shard_base/shard_base.h
        vgl_datastructures/graphs/undirected_containers/sharded_csr_graph/shard_base/shard_base.hpp
        vgl_datastructures/graphs/undirected_containers/sharded_csr_graph/shard_CSR/shard_CSR.h
        vgl_datastructures/graphs/undirected_containers/sharded_csr_graph/shard_CSR/shard_CSR.hpp
        vgl_datastructures/graphs/undirected_containers/sharded_csr_graph/shard_CSR/shard_CSR_pointer_data.h
        vgl_datastructures/graphs/undirected_containers/sharded_csr_graph/shard_vect_csr/shard_vect_CSR.h
        vgl_datastructures/graphs/undirected_containers/sharded_csr_graph/shard_vect_csr/shard_vect_CSR.hpp
        vgl_datastructures/graphs/undirected_containers/sharded_csr_graph/shard_vect_csr/shard_vect_CSR_pointer_data.h
        vgl_datastructures/graphs/undirected_containers/sharded_csr_graph/sharded_csr_graph.h
        vgl_datastructures/graphs/undirected_containers/sharded_csr_graph/sharded_csr_graph.hpp
        vgl_datastructures/graphs/base_graph.h
        misc/custom_test.cpp
        misc/generate_memory_traces.cpp
        misc/lambda_tests.cpp
        misc/nvgraph_comparison.cpp
        verification/page_rank_verification.hpp
        verification/shortest_paths_verification.hpp
        settings.h
